--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "team-icecream-12",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "homepage": "https://novikovanat.github.io/team-icecream-12",
   "scripts": {
     "dev": "parcel src/*.html",
@@ -21,12 +20,14 @@
     "url": "https://github.com/novikovanat/team-icecream-12/issues"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0",
     "gh-pages": "^3.1.0",
-    "parcel-bundler": "^1.12.4",
+    "parcel": "^2.0.0",
     "posthtml-include": "^1.4.3",
-    "sass": "^1.26.9"
+    "sass": "^1.77.8"
   },
   "dependencies": {
-    "caniuse-lite": "^1.0.30001170"
+    "caniuse-lite": "^1.0.30001170",
+    "parcel": "^2.12.0"
   }
 }
